--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
-  "extends": "next/core-web-vitals",
-  "react/no-unescaped-entities": ["error", { "forbid": [">", "}"] }]
+  "extends": ["next/core-web-vitals", "prettier"],
+  "rules": {
+    "react/no-unescaped-entities": ["error", { "forbid": [">", "}"] }],
+    "no-console": "warn",
+    "no-undefined": "warn",
+    "no-unused-vars": "warn"
+  }
 }
