--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["coffeeshop", "coffeeshops"]
+  "cSpell.words": [
+    "Airtable",
+    "AIRTABLE",
+    "coffeeshop",
+    "coffeeshops",
+    "coffeeshopsairtable",
+    "getcoffeeshopsbylocation",
+    "latlng",
+    "unsplash"
+  ]
 }
