--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^13.1.1",
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "airtable": "^0.11.6",
     "daisyui": "^2.46.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
@@ -21,10 +23,13 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "unsplash-js": "^7.0.15",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
