Live voting system added for each coffeeshop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "coffeeshop",
     "coffeeshops",
     "coffeeshopsairtable",
+    "getcoffeeshopbyid",
     "getcoffeeshopsbylocation",
     "latlng",
     "unsplash"
