--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "swr": "^2.0.0",
     "unsplash-js": "^7.0.15",
     "uuid": "^9.0.0"
   },
